<resources>
    <string name="app_name">MyProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="serverAddress">Server Address</string>
    <string name="personName">Name</string>
    <string name="keyPair">Public/Private key pair</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="contacts_title_bar">Contacts</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="subject_line">Subject</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="public_key">Public Key</string>
    <string name="save_button">Save</string>
    <string name="name">Name</string>
    <string name="sender">Sender Name</string>
    <string name="body">Body</string>
</resources>
