<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hemankita.myproject.ComposeActivity"
    tools:showIn="@layout/activity_compose">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.hemankita.myproject.ComposeActivity"
        tools:showIn="@layout/activity_compose">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To:"
            android:textSize="30dp"
            android:id="@+id/composeText"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toText"
            android:textSize="30dp"
            android:hint="@string/sender"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_line"
        android:textSize="30dp"
        android:id="@+id/subjectText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_weight="0.70"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/body"
        android:textSize="30dp"
        android:gravity="start"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.hemankita.myproject.ComposeActivity"
        tools:showIn="@layout/activity_compose"
        android:weightSum="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/trashButton"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="bottom"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="Save"
            android:id="@+id/saveComposeButton"
            android:layout_gravity="bottom"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/hourglassButton"
            android:src="@drawable/ic_hourglass_empty_black_24dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom" />

    </LinearLayout>
</LinearLayout>
